ec2configfile.tf
provider "aws" {
  access_key = "*****"
  secret_key = "*****"
  region     = "us-east-1"
}
resource "aws_instance" "example" {
  ami           = "ami-0761dd91277e34178"
  instance_type = "t2.micro"
}
